--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,20 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="title_activity_maps">Map</string>
+
+    <string-array name="items_Disease">
+        <item>All Disease</item>
+        <item>Malaria</item>
+        <item>Diarrhoea</item>
+        <item>Swine Flu</item>
+        <item>Flu</item>
+    </string-array>
+
+    <string-array name="items_Age">
+        <item>All Age</item>
+        <item>0 to 10</item>
+        <item>11 to 20</item>
+        <item>21 to 30</item>
+        <item>31 to 40</item>
+    </string-array>
 </resources>
